<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_title"
            android:layout_marginBottom="100dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt_email"/>

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_placeholder_email"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/login_prompt_password"/>

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/login_placeholder_password" />

        <Button
            android:id="@+id/login_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_action_sign_in_short"
            android:layout_gravity="center"/>
    </LinearLayout>
</layout>